--- a/views/login.html
+++ b/views/login.html
@@ -29,8 +29,8 @@
                     <form method="POST" class="col s12">
                       <div class="row">
                         <div class="input-field col s12">
-                          <input name="username" id="email" type="username" class="validate">
-                          <label for="email">Username</label>
+                          <input name="username" id="username" type="username" class="validate">
+                          <label for="username">Username</label>
                         </div>
                       </div>
                       
