--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Go</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/">Home</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
