--- a/views/login.html
+++ b/views/login.html
@@ -15,28 +15,45 @@
 
 </head>
 <body>
-        <nav>
-                <div class="nav-wrapper">
-                  <a href="#" class="brand-logo">Go</a>
-                  <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/login">Login</a></li>
-                  </ul>
-                </div>
-              </nav>
+  <nav class="navbar navbar-light" style="background-color: #ffffff;">
+    <div class="container">
+        <a class="navbar-brand" href="register.html">
+          <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="/home">Home</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="/register">Register</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="/login">Login</a>
+                </li>
+        </div>
+    </div>
+</nav>
     <div class="container">
             <div class="row">
                     <form method="POST" class="col s12">
                       <div class="row">
                         <div class="input-field col s12">
-                          <input name="username" id="username" type="username" class="validate">
+                          <input name="username" id="username" type="text" class="form-group">
                           <label for="username">Username</label>
                         </div>
                       </div>
                       
                       <div class="row">
                         <div class="input-field col s12">
-                          <input name="password" id="password" type="password" class="validate">
+                          <input name="password" id="password" type="password" class="form-group">
                           <label for="password">Password</label>
                         </div
                         </div>
