--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,4 @@
+.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,15 +22,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Go</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/home">Home</a></li>
-          <li><a href="/logout">Logout</a></li>
-        </ul>
+    <nav class="navbar navbar-light" style="background-color: #ffffff;">
+      <div class="container">
+          <a class="navbar-brand" href="register.html">
+            <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
+                  <li class="nav-item">
+                      <a class="nav-link click-scroll" href="/home">Home</a>
+                  </li>
+
+                  <li class="nav-item">
+                      <a class="nav-link click-scroll" href="/logout">Log Out</a>
+                  </li>
+          </div>
       </div>
-    </nav>
+  </nav>
     <div class="container">
       <h3>Welcome {{ .username }}</h3>
     </div>
