--- a/views/register.html
+++ b/views/register.html
@@ -24,7 +24,7 @@
   <body {overflow: hidden;}>
     <nav class="navbar navbar-light" style="background-color: #ffffff;">
       <div class="container">
-          <a class="navbar-brand" href="register.html">
+          <a class="navbar-brand" href="/home">
             <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
