--- a/views/register.html
+++ b/views/register.html
@@ -123,7 +123,7 @@ https://templatemo.com/tm-583-festava-live
                                     </div>
 
                                     <div class="col-lg-6 col-md-6 col-12">
-                                        <input type="text" name="name" id="nama" class="form-control" placeholder="Nama"
+                                        <input type="text" name="nama" id="nama" class="form-control" placeholder="Nama"
                                             required>
                                     </div>
 
@@ -134,7 +134,7 @@ https://templatemo.com/tm-583-festava-live
                                 </div>
 
                                 <label class="form-label" for="upload_file">Upload Surat</label>
-                                <input type="file" class="form-control" id="upload_file" />
+                                <input type="file" name="upload_file" class="form-control" id="upload_file"/>
 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
