--- a/views/login.html
+++ b/views/login.html
@@ -1,65 +1,279 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Page</title>
 
-      <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Pendaftaran PKL</title>
+
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap" rel="stylesheet">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="css/bootstrap-icons.css" rel="stylesheet">
+
+    <link href="css/templatemo-festava-live.css" rel="stylesheet">
+    <!--
+
+TemplateMo 583 Festava Live
+
+https://templatemo.com/tm-583-festava-live
+
+-->
 
 </head>
+
 <body>
-  <nav class="navbar navbar-light" style="background-color: #ffffff;">
-    <div class="container">
-        <a class="navbar-brand" href="/home">
-          <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="/home">Home</a>
-                </li>
+    <main>
 
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="/login">Login</a>
-                </li>
-        </div>
-    </div>
-</nav>
-    <div class="container">
-            <div class="row">
-                    <form method="POST" class="col s12">
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <input name="username" id="username" type="text" class="form-group">
-                          <label for="username">Username</label>
-                        </div>
-                      </div>
-                      
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <input name="password" id="password" type="password" class="form-group">
-                          <label for="password">Password</label>
-                        </div
-                        </div>
-                        <div class="row">
-                                <button type="submit" class="waves-effect waves-light btn"><i class="material-icons left"></i>Login</button>
-                                <p>Didn't have account? <a href="/register"> Register </a></p>
-                        </div>  
-                    </form>
-             </div>
-    </div>
+        <header class="site-header">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-12 col-12 d-flex flex-wrap">
+                        <p class="d-flex me-4 mb-0">
+                            <i class="bi-person custom-icon me-2"></i>
+                            <strong class="text-dark">Selamat datang</strong>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </header>
+
+
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="home.html">
+                    <img src="https://www.uhamka.ac.id/static/media/UhamaLogo2.d4e8b86c517ad991c800.png" width="auto" height="65px" class="d-inline-block align-top" alt="">
+                 
+                </a>
+
     
-</body>
-</html>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="home.html">Halaman Utama</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="home.html#section_2">Tentang</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="home.html#section_3">Jadwal</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="home.html#section_4">Login</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="home.html#section_5">Kontak</a>
+                        </li>
+                    </ul>
+
+                
+                </div>
+            </div>
+        </nav>
+
+
+        <section class="ticket-section section-padding">
+            <div class="section-overlay"></div>
+
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-6 col-10 mx-auto">
+                        <form class="custom-form ticket-form mb-5 mb-lg-0" action="#" method="post" role="form">
+                            <h2 class="text-center mb-4">Login</h2>
+
+                            <div class="ticket-form-body">
+                                
+                                <input type="text" class="form-control" name="nim"
+                                    placeholder="NIM" required>
+                                    <!-- placeholder="Ph 085-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required=""> -->
+                                
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-12">
+                                        <input type="text" name="username" id="username"
+                                            class="form-control" placeholder="Username" required>
+                                    </div>
+
+                                    <div class="col-lg-6 col-md-6 col-12">
+                                        <input type="password" name="password" id="password" class="form-control" placeholder="Password"
+                                            required>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                </section>
+            </main>
+        
+        
+            <footer class="site-footer">
+                <div class="site-footer-top">
+                    <div class="container">
+                        <div class="row">
+        
+                            <div class="col-lg-6 col-12">
+                                <h2 class="text-white mb-lg-0">Festava Live</h2>
+                            </div>
+        
+                            <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
+                                <ul class="social-icon d-flex justify-content-lg-end">
+                                    <li class="social-icon-item">
+                                        <a href="https://www.facebook.com/UhamkaID/" class="social-icon-link">
+                                            <span class="bi-facebook"></span>
+                                        </a>
+                                    </li>
+    
+                                    <li class="social-icon-item">
+                                        <a href="https://twitter.com/UhamkaID" class="social-icon-link">
+                                            <span class="bi-twitter"></span>
+                                        </a>
+                                    </li>
+    
+                                    <li class="social-icon-item">
+                                        <a href="https://www.instagram.com/uhamkaid/" class="social-icon-link">
+                                            <span class="bi-instagram"></span>
+                                        </a>
+                                    </li>
+    
+                                    <li class="social-icon-item">
+                                        <a href="https://www.youtube.com/@HumasUhamka/" class="social-icon-link">
+                                            <span class="bi-youtube"></span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="container">
+                    <div class="row">
+        
+                        <div class="col-lg-6 col-12 mb-4 pb-2">
+                            <h5 class="site-footer-title mb-3">Links</h5>
+        
+                            <ul class="site-footer-links">
+                                <li class="site-footer-link-item">
+                                    <a href="#" class="site-footer-link">Halaman Utama</a>
+                                </li>
+        
+                                <li class="site-footer-link-item">
+                                    <a href="home.html#section_2" class="site-footer-link">Tentang</a>
+                                </li>
+        
+                                <li class="site-footer-link-item">
+                                    <a href="home.html#section_3" class="site-footer-link">Jadwal</a>
+                                </li>
+        
+                                <li class="site-footer-link-item">
+                                    <a href="login.html" class="site-footer-link">Login</a>
+                                </li>
+        
+                                <li class="site-footer-link-item">
+                                    <a href="home.html#section_5" class="site-footer-link">Kontak</a>
+                                </li>
+                    
+                            </ul>
+                        </div>
+        
+                        <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                            <h5 class="site-footer-title mb-3">Have a question?</h5>
+        
+                            <p class="text-white d-flex mb-1">
+                                <a href="tel: 090-080-0760" class="site-footer-link">
+                                    090-080-0760
+                                </a>
+                            </p>
+        
+                            <p class="text-white d-flex">
+                                <a href="mailto:hello@company.com" class="site-footer-link">
+                                    hello@company.com
+                                </a>
+                            </p>
+                        </div>
+        
+                        <div class="col-lg-3 col-md-6 col-11 mb-4 mb-lg-0 mb-md-0">
+                            <h5 class="site-footer-title mb-3">Location</h5>
+        
+                            <p class="text-white d-flex mt-3 mb-2">
+                                Silang Junction South, Tagaytay, Cavite, Philippines</p>
+        
+                            <a class="link-fx-1 color-contrast-higher mt-3" href="#">
+                                <span>Our Maps</span>
+                                <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
+                                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+                                        <circle cx="16" cy="16" r="15.5"></circle>
+                                        <line x1="10" y1="18" x2="16" y2="12"></line>
+                                        <line x1="16" y1="12" x2="22" y2="18"></line>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="site-footer-bottom">
+                    <div class="container">
+                        <div class="row">
+        
+                            <div class="col-lg-3 col-12 mt-5">
+                                <p class="copyright-text">Copyright © 2036 Festava Live Company</p>
+                                <p class="copyright-text">Distributed by: <a href="https://themewagon.com">ThemeWagon</a></p>
+                            </div>
+        
+                            <div class="col-lg-8 col-12 mt-lg-5">
+                                <ul class="site-footer-links">
+                                    <li class="site-footer-link-item">
+                                        <a href="#" class="site-footer-link">Terms &amp; Conditions</a>
+                                    </li>
+        
+                                    <li class="site-footer-link-item">
+                                        <a href="#" class="site-footer-link">Privacy Policy</a>
+                                    </li>
+        
+                                    <li class="site-footer-link-item">
+                                        <a href="#" class="site-footer-link">Your Feedback</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        
+            <!--
+        
+        T e m p l a t e M o
+        
+        -->
+            <!-- JAVASCRIPT FILES -->
+            <script src="js/jquery.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            <script src="js/jquery.sticky.js"></script>
+            <script src="js/custom.js"></script>
+        
+        </body>
+        
+        </html>
