--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -42,7 +42,8 @@ https://templatemo.com/tm-583-festava-live
   --font-weight-bold: 700;
 }
 
-body {
+body ::-webkit-scrollbar {
+  display: none;
   background-color: var(--white-color);
   font-family: var(--body-font-family);
 }
