--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -42,8 +42,7 @@ https://templatemo.com/tm-583-festava-live
   --font-weight-bold: 700;
 }
 
-body ::-webkit-scrollbar {
-  display: none;
+body {
   background-color: var(--white-color);
   font-family: var(--body-font-family);
 }
